--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="keywords" content="Vegetarian Recipes">
+    <meta property="og:url" content="https://loquacious-mousse-2914d7.netlify.app/">
+    <meta name="description" content="A serch engine for vegetarian recipes">
+    <meta property="og:title" content="Peas of Mind">
+    <meta name="author" content="Claudio Fanzini">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="./src/assets/images/Peas_of_Mind_resize.png">
     <title>Peas of Mind</title>
+    <link rel="icon" type="image/x-icon" href="./src/assets/images/Peas_of_Mind_resize.png">
   </head>
   
   <style>
